--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"tslib": "^2.4.0"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^7.1.0",
 		"eslint": "^7.32.0",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-import": "^2.23.4",
